# termproxy

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  main.rs  utils.rs
src/work/: linux.rs  macos.rs  mod.rs  windows.rs
