[package]
name = "termproxy"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "2"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0"

[target.'cfg(target_os = "linux")'.dependencies]
zbus = "4"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "s"
debug = false
overflow-checks = false
panic = "abort"
